# subtitle-marketing-studio

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh
_assets/2026-05-08/: 263-0508_1304_이돈돈.vtt
_context/: 17type.txt
_context/260527-first/: ad_copy.md  blog_editor.md  community_post.md  ebook_chapter.md  faq.md  instagram_cards.md  landing_headline.md  linkedin.md  newsletter.md  pas_copy.md  persona.md  press_release.md  promotion.md  push_message.md  reviews.md  seo_meta.md  tags_keywords.md
_legacy/v1_17studios/prompts_old/: ad_copy_ko.md  blog_velog_tech_ko.md  community_post_ko.md  faq_ko.md  linkedin_ko.md  persona_ko.md  press_release_ko.md  promotion_ko.md  reviews_ko.md  tags_keywords_ko.md
core/: __init__.py  card_templates.py  docx_render.py  html_render.py  image_render.py  llm.py  png_render.py  runner.py  subtitle.py  user_settings.py
docs/: cost.md  output-policy.md  setup.md
knowledge/: channel-style-research.md
prompts/: blog_brunch_emotional_ko.md  blog_column_op_ko.md  blog_editor_ko.md  blog_medium_essay_ko.md  blog_naver_daily_ko.md  blog_naver_info_ko.md  blog_naver_review_ko.md  blog_personal_retro_ko.md  blog_tistory_seo_ko.md  blog_wordpress_en_ko.md  ebook_chapter_ko.md  instagram_cards_ko.md  instagram_info_ko.md  instagram_story_ko.md  kakao_cards_ko.md  landing_headline_ko.md  newsletter_ko.md  pas_copy_ko.md  press_release_ko.md  push_message_ko.md  seo_meta_ko.md  threads_insight_ko.md  threads_quick_ko.md
studio/: __init__.py  _base.py  registry.py
