[project]
name = "textmarketing-lm"
version = "0.1.0"
description = "Subtitle-to-17-marketing-asset Streamlit studio (tsbookmaker-style)"
requires-python = ">=3.10,<3.13"
dependencies = [
  "streamlit>=1.40",
  "litellm>=1.50",
  "ollama>=0.3",
  "python-dotenv>=1.0",
  "pandas>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "studio*"]
