[project]
name = "subtitle-marketing-studio"
version = "0.1.0"
description = "Subtitle → 17 marketing text assets (Streamlit, Ubion LiteLLM proxy)"
requires-python = ">=3.10,<3.13"
dependencies = [
  "streamlit>=1.40",
  "openai>=1.50",
  "python-dotenv>=1.0",
  "pandas>=2.0",
  "markdown>=3.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "studio*"]
